# Django_assignment

./: .gitignore  pyproject.toml
.config_secret/: secret.json
config/: settings.py  urls.py
etc/: studynote.txt
static/css/: base.css  login.css  signup.css  todo_create.css  todo_info.css  todo_list.css  todo_update.css
templates/: base.html  pagination.html  todo_create.html  todo_form.html  todo_info.html  todo_list.html  todo_update.html
templates/include/: form.html
templates/registration/: login.html  signup.html  signup_done.html  verify_failed.html  verify_success.html
to_do_list/: admin.py  cb_urls.py  cb_views.py  forms.py  models.py  views.py
to_do_list/migrations/: 0001_initial.py
users/: admin.py  cb_views.py  forms.py  models.py  views.py
